--- a/index.html
+++ b/index.html
@@ -1,36 +1,7 @@
-<style>
-#table {
-    table-layout: fixed;
-}
-
-th, td {
-    border: 1px solid;
-    padding: 0;
-}
-td{
-	width :20px;
-	height:20px;
-}
-td.X{
-	background-color:black;
-}
-svg{
-	position:absolute;
-	width:500px;
-	height:500px;
-	top:30px;
-	left:600px;
-}
-rect{
-cursor: pointer;
-}
-rect.X{
-	background-color:grey;
-}
-
-</style>
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="./style.css">
 <body>
-game of life v.0.0.2 <input type="button" value="NEXT"/> <span id="count"></span>
+game of life v.0.0.3 Популяция:  <span id="count"></span>
 <div id='table'>table</div>
 <div id='svg'>svg</div>
 </body>
